Reimplementing updateStatistics with a new logic for Info's classes