@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import app.Admin;
 import app.audio.Collections.Album;
@@ -13,6 +14,7 @@ import app.pages.ArtistPage;
 import app.user.Entities.Event;
 import app.user.Entities.Merchandise;
 import app.user.Statistics.*;
+import app.user.Statistics.Infos.Infos;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -52,10 +54,10 @@ public final class Artist extends ContentCreator {
     private WrappedArtist statistics;
     @Getter
     @Setter
-    private List<AlbumInfo> albumsInfos;
+    private List<Infos> albumsInfos;
     @Getter
     @Setter
-    private List<SongInfo> songsInfos;
+    private List<Infos> songsInfos;
     @Getter
     @Setter
     private List<String> fansNames;
@@ -66,7 +68,11 @@ public final class Artist extends ContentCreator {
     @Setter
     private int noListeners = 0;
     @Getter
-    private boolean hasAccessedData;
+    private boolean accessedData;
+    @Getter
+    @Setter
+    private int noListen = 0;
+    private final int five = 5;
 
     /**
      * Instantiates a new Artist.
@@ -89,7 +95,7 @@ public final class Artist extends ContentCreator {
         songsInfos = new ArrayList<>();
         fansNames = new ArrayList<>();
         listeners = new ArrayList<>();
-        hasAccessedData = false;
+        accessedData = false;
         super.setPage(new ArtistPage(this));
     }
 
@@ -161,88 +167,109 @@ public final class Artist extends ContentCreator {
         return "artist";
     }
 
+    /**
+     * Add the price of the merchRevenue
+     *
+     * @param price the merch's price
+     */
     public void addMerchRevenue(final Double price) {
         merchRevenue += price;
     }
-    public void arrangeStatistics(Artist artist) {
-        List<AlbumInfo> albums = statistics.getTopAlbums();
-        //sortare Albume chatGPT
-        List<AlbumInfo> top5Albums = albums.stream()
+
+    /**
+     * Arranges the top items in a list based on the number of listens and names.
+     * The list will be sorted in descending order by the number of listens,
+     * and for items with the same number of listens, they will be sorted in ascending
+     * order by name.
+     * Only the top 5 items will be retained in the list.
+     *
+     * @param items The list of items to be arranged.
+     * @param <T>   The type of items in the list, must extend the Infos interface.
+     */
+    public <T extends Infos> void arrangeTopItems(final List<T> items) {
+        List<T> top5Items = items.stream()
                 .sorted(Comparator
-                        .comparingInt(AlbumInfo::getNoListen)
+                        .comparingInt(Infos::getNoListen)
                         .reversed()
-                        .thenComparing(AlbumInfo::getName))
-                .limit(5)
-                .collect(Collectors.toList());
-        statistics.setTopAlbums(top5Albums);
+                        .thenComparing(Infos::getName))
+                .limit(five)
+                .toList();
 
-        //sortare cantece
-        List<SongInfo> songs = statistics.getTopSongs();
-        List<SongInfo> top5Songs = songs.stream()
-                .sorted(Comparator
-                        .comparingInt(SongInfo::getNoListen)
-                        .reversed()
-                        .thenComparing(SongInfo::getName))
-                .limit(5)
-                .collect(Collectors.toList());
-        statistics.setTopSongs(top5Songs);
+        items.clear();
+        items.addAll(top5Items);
+    }
+    /**
+     * This method arranges all artist's items calling the previous method.
+     * The items in each list implement the Infos interface.
+     */
+    public void arrangeStatistics(final Artist artist) {
+        arrangeTopItems(statistics.getTopAlbums());
+        arrangeTopItems(statistics.getTopSongs());
 
+        // Extracting the users from the list with the fans' names
+        List<User> fansUsers = statistics.getTopFans()
+                                            .stream()
+                                            .map(Admin.getInstance()::getUser)
+                                            .toList();
 
-        List<String> topFans = statistics.getTopFans();
-        List<User> fansUsers = new ArrayList<>();
-        for (String fan : topFans) {
-            User user = Admin.getInstance().getUser(fan);
-            fansUsers.add(user);
-        }
-        List<FanInfo> fanInfos = new ArrayList<>();
-        for (User user : fansUsers) {
-            List<ArtistInfo> artistInfos = user.getArtistsInfos();
-            for (ArtistInfo artistInfo : artistInfos) {
-                if(artistInfo.getName().equals(artist.getUsername())) {
-                    fanInfos.add(new FanInfo(user.getUsername(), artistInfo.getNoListen()));
-                }
-            }
-        }
+        // Creating the fanInfos list based on the users that have listened this artist
+        List<Infos> fanInfos = fansUsers.stream()
+                .flatMap(user -> user.getArtistsInfos().stream()
+                        .filter(artistInfo -> artistInfo.getName().equals(artist.getUsername()))
+                        .map(artistInfo -> new Infos(user.getUsername(),
+                                artistInfo.getNoListen())))
+                .toList();
+
+        // Setting the list of fans' names in statistics
         List<String> fans = fanInfos.stream()
                 .sorted(Comparator
-                        .comparingInt(FanInfo::getNoListen)
+                        .comparingInt(Infos::getNoListen)
                         .reversed()
-                        .thenComparing(FanInfo::getName))
-                .map(FanInfo::getName)
-                .limit(5)
+                        .thenComparing(Infos::getName))
+                .map(Infos::getName)
+                .limit(five)
                 .collect(Collectors.toList());
         statistics.setTopFans(fans);
 
     }
 
+    /**
+     * The method creates the object node with artist's statistics based on the
+     * information accumulated up to the moment of the "wrapped" command
+     *
+     * @return the object node containing the statistics
+     */
     public ObjectNode formattedStatisticsArtist() {
-        // Convertirea obiectului WrappedHost într-un obiect JSON
         ObjectMapper objectMapper = new ObjectMapper();
         ObjectNode resultNode = objectMapper.createObjectNode();
 
+        // Retrieving artist's statistics
         WrappedArtist wrappedArtist = getStatistics();
 
+        // Verifying if artist's sources have been accessed
+        accessedData = Stream.of(
+                        wrappedArtist.getTopSongs(),
+                        wrappedArtist.getTopAlbums(),
+                        wrappedArtist.getTopFans()
+                )
+                .anyMatch(thisList -> thisList != null && !thisList.isEmpty());
+
+        /// Creating a JSON object for top albums and adding information
         ObjectNode topAlbumsNode = resultNode.putObject("topAlbums");
-        // Adăugarea informațiilor despre albumele de top
-        for (AlbumInfo album : wrappedArtist.getTopAlbums()) {
-            hasAccessedData = true;
-            topAlbumsNode.put(album.getName(), album.getNoListen());
-        }
+        wrappedArtist.getTopAlbums().forEach(album -> topAlbumsNode.put(album.getName(),
+                album.getNoListen()));
 
+
+        // Creating a JSON object for top songs and adding information
         ObjectNode topSongsNode = resultNode.putObject("topSongs");
-        // Adăugarea informațiilor despre cantecele de top
-        for (SongInfo song : wrappedArtist.getTopSongs()) {
-            hasAccessedData = true;
-            topSongsNode.put(song.getName(), song.getNoListen());
-        }
+        wrappedArtist.getTopSongs().forEach(song -> topSongsNode.put(song.getName(),
+                song.getNoListen()));
 
+        // Creating a JSON object for top fans and adding information
         ArrayNode topFansNode = resultNode.putArray("topFans");
-        // Adăugarea informațiilor despre cantecele de top
-        for(String name : wrappedArtist.getTopFans()) {
-            hasAccessedData = true;
-            topFansNode.add(name);
-        }
+        wrappedArtist.getTopFans().forEach(topFansNode::add);
 
+        // Adding the number of listeners
         resultNode.put("listeners", wrappedArtist.getListeners());
         return resultNode;
     }
